[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["gzip", "blocking"] }
flate2 = "1"
redis = { version = "0.23", features = ["aio", "tokio-comp", "keep-alive"]}
